--- a/AndrewAssign33/src/main/res/values/strings.xml
+++ b/AndrewAssign33/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="exit">Do you want to exit the app?</string>
     <string name="yes">YES</string>
     <string name="no">NO</string>
+    <string name="tab1Text">Please select a date</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
