--- a/AndrewAssign33/src/main/res/values/strings.xml
+++ b/AndrewAssign33/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="yes">YES</string>
     <string name="no">NO</string>
     <string name="tab1Text">Please select a date</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tab2Text">Andrew Fraser N01309442</string>
+    <string name="clear">CLEAR</string>
+
 </resources>
