-on the tab4 when the button is pressed, the user is sent to a separate application which asks for permissions -if the permissions are not granted, a snack bar appears

--- a/AndrewAssign33/src/main/res/values/strings.xml
+++ b/AndrewAssign33/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndrewAssign3</string>
+    <string name="app_name">Andrew Fraser N01309442</string>
     <string name="TAB1">tab1</string>
     <string name="TAB2">tab2</string>
     <string name="TAB3">tab3</string>
@@ -14,6 +14,7 @@
     <string name="lastName">Fraser</string>
     <string name="switchOn">switch is on</string>
     <string name="switchOff">switch is off</string>
+    <string name="decline">Permissions were declined</string>
 
 
 </resources>
